# synqui-sdk

./: MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
cognitionflow/: __init__.py  auto_instrumentation.py  batch_processor.py  config.py  context.py  decorators.py  memory_manager.py  models.py  py.typed  sdk.py  serialization.py  workflow.py
docs/: API_REFERENCE.md  BEST_PRACTICES.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  SDK_ANALYTICS.md  TROUBLESHOOTING.md  __init__.py  index.md
docs/advanced/: auto-instrumentation.md
docs/integrations/: celery.md  fastapi.md  sqlalchemy.md
examples/: __init__.py  advanced_usage.py  basic_usage.py  init_examples.py  integration_examples.py  token_counting_example.py
tests/: __init__.py  test_auto_instrumentation.py  test_batch_processor.py  test_config.py  test_sdk.py
vaquero/: __init__.py  analytics.py  auto_instrumentation.py  batch_processor.py  circuit_breaker.py  config.py  cost_calculator.py  decorators.py  langchain.py  langgraph.py  models.py  sdk.py  serialization.py  token_counter.py  trace_collector.py  trace_collector_hierarchical.py  trace_collector_unified.py  trace_collector_v2.py  utils.py  workflow.py
vaquero/processors/: __init__.py  base_processor.py  langchain_processor.py  langgraph_processor.py
